# codetrekking

./: .gitignore  .gitmodules  Makefile
application/airflow/: .gitignore
application/airflow/config/: airflow.cfg
application/airflow/dags/: garmin_download_daily_data.py  garmin_process_fit_files.py  garmin_setup_config.py
application/api-service/: .env.test.example  .gitignore  README.md  dev_start.sh  pyproject.toml  pytest.ini
application/api-service/alembic/: env.py
application/api-service/alembic/versions/: 5d6cd3b59299_add_user_garmin_credentials_table.py  add_workout_plan_tables.py  fbdef3bb42ac_add_type_ts_aligned_fields_to_training_.py
application/api-service/src/: dev_config.py  main.py  settings.py
application/api-service/src/config/: __init__.py  logging.py  settings.py
application/api-service/src/database/: __init__.py  config.py  elasticsearch.py  garmin_repository.py  models.py  workout_plan_repository.py
application/api-service/src/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
application/api-service/src/models/: __init__.py  requests.py  responses.py  tasks.py  workout_plans.py
application/api-service/src/routes/: __init__.py  analytics.py  auth.py  garmin.py  garmin_credentials.py  monitoring.py  tasks.py  training_plans.py
application/api-service/src/routes/analytics/: __init__.py  activity.py  health.py  indicators.py  utils.py  workout.py  zone_distributions.py
application/api-service/src/services/: __init__.py  garmin_service.py  jwt_service.py  session_service.py  user_service.py
application/api-service/tests/: README.md  __init__.py  conftest.py  test_environment.py  test_health_metrics.py  test_weekly_summary.py
application/mastra/: .gitignore  package.json  pnpm-lock.yaml
application/mastra/src/: logger.ts
application/mastra/src/mastra/: index.ts  model.ts  networks.ts  tools.ts  type.ts
application/mastra/src/mastra/agents/: phase-planner.ts  utils.ts  workout-enhancer.ts  workout-expert.ts
application/mastra/src/mastra/mcp/: peakflow-client.ts
application/mastra/src/mastra/tools/: utility-tools.ts
application/mastra/src/mastra/utils/: coaches.ts  indicators.ts
application/mastra/src/mastra/workflows/: generateDetailedWorkoutsWorkflow.ts  runningPhaseWorkflow.ts  weeklyPlanWorkflow.ts
application/peakflow/: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
application/peakflow-tasks/: .gitignore  README.md  pyproject.toml  stop_dev.py
application/peakflow-tasks/peakflow_tasks/: __init__.py  api.py  base_tasks.py  celery_app.py  cli.py  config.py  dev.py  exceptions.py
application/peakflow-tasks/peakflow_tasks/database/: __init__.py  connection.py  models.py
application/peakflow-tasks/peakflow_tasks/services/: __init__.py  garmin_credential_service.py
application/peakflow-tasks/peakflow_tasks/tasks/: __init__.py  garmin.py  processing.py  storage.py  workflows.py
application/peakflow-tasks/peakflow_tasks/utils/: __init__.py  logging.py  monitoring.py  production_monitor.py  retry.py  validation.py
application/peakflow-tasks/tests/: __init__.py  conftest.py  test_base_tasks.py  test_basic_functionality.py  test_config.py  test_garmin_sync_workflow.py  test_garmin_tasks.py  test_performance_monitoring.py  test_phase4_migration.py  test_processing_helpers.py  test_processing_tasks.py  test_storage_tasks.py
application/peakflow/peakflow/: __init__.py  const.py  utils.py
application/peakflow/peakflow/analytics/: __init__.py  advanced.py  coaches.py  elasticsearch.py  heart_rate_zones.py  helper.py  interface.py  pace_zones.py  power_zones.py  tss.py
application/peakflow/peakflow/processors/: __init__.py  activity.py  fit.py  fitparse_processor.py  health.py  hrv_garmin_sdk.py  interface.py
application/peakflow/peakflow/providers/: __init__.py  garmin.py
application/peakflow/peakflow/services/: __init__.py  tss_service.py
application/peakflow/peakflow/storage/: __init__.py  elasticsearch.py  interface.py  model.py
application/peakflow/peakflow/utils/: __init__.py  core.py  encryption.py
application/peakflow/tests/: fit_structure_summary.py  fitness_analytics_demo.py  test_enhanced_fit_processor.py  test_es_connection.py  test_power_zones.py  test_tss.py  tss_demo.py
docker/compose/: airflow.yml  elk.yml  minio.yml  peakflow-tasks.yml  postgres.yml  potainer-agent.yml  rabbitmq-broker.yml  registry.yml
docker/config/: elasticsearch.yml  filebeat.yml  kibana.yml
docker/config/logstash/: logstash.yml
docker/config/logstash/pipeline/: logstash.conf
docker/config/minio/init/: setup-buckets.sh
docker/config/postgres/: pg_hba.conf  postgresql.conf
docker/config/postgres/init/: 01-init-databases.sh
docker/config/rabbitmq/: definitions.json  rabbitmq.conf
docker/dockerfile/: airflow.Dockerfile  api-service.Dockerfile  monitoring.Dockerfile  peakflow-tasks.Dockerfile
docker/scripts/: entrypoint.sh
docs/: critical-pace-power-design.md
scripts/: .env.example  airflow_node_recommend.sh  config.yaml  deploy_airflow.sh  deploy_elk.sh  deploy_potainer.sh  entry.sh  monitor-mastra.sh  setup.sh  venv-helper.sh
scripts/deploy/: airflow.sh  api-service.sh  celery-workers.sh  database-storage.sh  elk.sh  minio.sh  peakflow-tasks.sh  postgres.sh  potainer.sh  rabbitmq-broker.sh  registry.sh
