[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codetrekking-api-service"
version = "0.1.0"
description = "FastAPI service for CodeTrekking fitness data pipeline"
readme = "README.md"
authors = [
    {name = "CodeTrekking Team", email = "team@codetrekking.dev"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pika>=1.3.0",
    "pydantic[email]>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "elasticsearch>=8.0.0",
    "structlog>=23.2.0",
    "peakflow",
    "peakflow-tasks",
    "celery>=5.3.0",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.1.1",
    "httpx>=0.28.1",
    "redis>=6.4.0",
    "bcrypt>=4.3.0",
    "fastapi-mcp>=0.4.0",
    "mcp[cli]>=1.14.1",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
peakflow = { path = "../peakflow", editable = true }
peakflow-tasks = { path = "../peakflow-tasks", editable = true }
